--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,15 +1,20 @@
 Django==1.5.4
 South==0.8.4
-actionlib==0.0.0
+amqp==1.4.5
+anyjson==0.3.3
 argparse==1.2.1
-catkin==0.4.6
-gencpp==0.3.4
-genlisp==0.3.3
-genmsg==0.3.10
-genpy==0.3.7
+billiard==3.3.0.17
+celery==3.1.11
+cookies==1.2.1
+django-celery==3.1.10
+feedparser==5.1.3
+freetype-py==1.0
+kombu==3.0.15
+librabbitmq==1.5.0
+mechanize==0.2.5
+numpy==1.8.0
 psycopg2==2.5.1
-requests==2.0.1
-ros-comm==1.8.16
-roslib==1.8.11
-rx==1.7.2
+pytz==2014.2
+requests==2.1.0
+scipy==0.13.3
 wsgiref==0.1.2
