--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -18,6 +18,7 @@ psycopg2==2.5.1
 python-dateutil==2.2
 pytz==2014.2
 requests==2.1.0
+selenium==2.43.0
 six==1.7.3
 wsgiref==0.1.2
 zope.interface==4.1.1
